objects/L2I_P_L_Sales_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Aircraft_Operator__c</fullName>
        <formula>L2I_Sales_Opportunity__r.L2I_AC_Operator__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aircraft Operator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_Owner__c</fullName>
        <formula>L2I_Sales_Opportunity__r.L2I_Aircraft_Owner__r.Name</formula>
        <label>Aircraft Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automated_Deal_Opportunity_Description__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; L2I_Sales_Opportunity__r.L2I_Parent_Opportunity__c, L2I_Sales_Opportunity__r.L2I_Parent_Opportunity__r.L2I_Deal_Opportunity_Description__c)</formula>
        <label>Automated Deal Opportunity Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automated_Sales_Opportunity_Description__c</fullName>
        <formula>L2I_Sales_Opportunity__r.L2I_Sales_Opportunity_Description__c</formula>
        <label>Automated Sales Opportunity Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAD_Date__c</fullName>
        <formula>L2I_Sales_Opportunity__r.L2I_Delivery_Schedule__r.First_Delivery_Date__c</formula>
        <label>First Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Account_Name__c</fullName>
        <formula>L2I_P_L_Approval__r.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Aircraft_Quantity__c</fullName>
        <formula>L2I_Sales_Opportunity__r.L2I_AircraftQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aircraft Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Aircraft_Type__c</fullName>
        <formula>L2I_Sales_Opportunity__r.L2I_Aircraft_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aircraft Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Configuration_Description__c</fullName>
        <inlineHelpText>Please provide a description of the configuration that you are trying to get approved</inlineHelpText>
        <label>Configuration Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Direct_Contribution_Margin_Perc__c</fullName>
        <formula>L2I_Direct_Contribution_Margin__c /  L2I_Net_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Contribution Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2I_Direct_Contribution_Margin__c</fullName>
        <formula>L2I_Marginal_Profit__c -  L2I_Total_Fixed_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Contribution Margin $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_Discounts__c</fullName>
        <label>Discounts</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_Effective_Discount_Perc__c</fullName>
        <formula>L2I_Discounts__c /L2I_Net_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2I_Effective_Shipset_Credit__c</fullName>
        <formula>L2I_Total_Credits__c/ L2I_Aircraft_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Shipset Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Fit_Type__c</fullName>
        <formula>Text(L2I_Sales_Opportunity__r.L2I_Fit_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Gross_Margin_Perc__c</fullName>
        <formula>L2I_Gross_Margin__c /  L2I_Net_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2I_Gross_Margin__c</fullName>
        <formula>L2I_Net_Sales__c -  L2I_Total_COGS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_Gross_Sales__c</fullName>
        <label>Gross Sales</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_Hardware_Contract_Months__c</fullName>
        <label>Hardware Contract Months</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Marginal_Profit_Perc__c</fullName>
        <formula>L2I_Marginal_Profit__c / L2I_Net_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marginal Profit %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2I_Marginal_Profit__c</fullName>
        <formula>L2I_Gross_Margin__c -  L2I_Total_Variable_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marginal Profit $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_Net_Sales__c</fullName>
        <formula>(L2I_Gross_Sales__c -( L2I_Discounts__c +  L2I_Total_Credits__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_Operator_Same_Account__c</fullName>
        <label>Operator same as Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_P_L_Approval__c</fullName>
        <label>P&amp;L Approval</label>
        <referenceTo>L2I_P_L_Approval__c</referenceTo>
        <relationshipLabel>P&amp;L Sales Opportunities</relationshipLabel>
        <relationshipName>Opportunities_Related_To_P_L</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>L2I_Primary_Product_Category__c</fullName>
        <label>Primary Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IFEC</fullName>
                </value>
                <value>
                    <fullName>DSS</fullName>
                </value>
                <value>
                    <fullName>PTS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Primary_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>P&amp;L Sales Opportunities</relationshipLabel>
        <relationshipName>P_L_Sales_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Product_Category__c</fullName>
        <formula>Text(L2I_Sales_Opportunity__r.L2I_Product_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Profit_Before_Tax_Perc__c</fullName>
        <formula>L2I_Profit_Before_Tax__c /  L2I_Net_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit Before Tax %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2I_Profit_Before_Tax__c</fullName>
        <formula>L2I_Marginal_Profit__c - ( L2I_Total_Fixed_Cost__c +  L2I_Total_Allocated_Costs__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit Before Tax $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_Sales_Opportunity__c</fullName>
        <label>Sales Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Sales</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Amendment</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Renewal</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>PPL</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>P&amp;L Sales Opportunities</relationshipLabel>
        <relationshipName>Opportunities_Related_To_P_L</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>L2I_Services_Contract_Months__c</fullName>
        <formula>L2I_Sales_Opportunity__r.SBQQ__PrimaryQuote__r.SBQQ__SubscriptionTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services Contract Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Total_Allocated_Costs__c</fullName>
        <label>Total Allocated Costs</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_Total_COGS__c</fullName>
        <label>Total COGS</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_Total_Credits__c</fullName>
        <label>Total Credits</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_Total_Fixed_Cost__c</fullName>
        <label>Total Fixed Cost</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_Total_Seat_Count__c</fullName>
        <formula>L2I_Sales_Opportunity__r.L2I_Total_Seat_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Seat Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Total_Variable_Cost__c</fullName>
        <label>Total Variable Cost</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>One_PA_Headquarter_Fee__c</fullName>
        <formula>L2I_Sales_Opportunity__r.One_PA_Headquarter_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One PA Headquarter Fee</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <formula>L2I_Sales_Opportunity__r.L2I_Opportunity_Number__c</formula>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PL_Net_Sales_to_Customer__c</fullName>
        <formula>PL_Quote_Lookup__r.PL_Net_Sales_to_Customer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Sales to Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_PTP_pct__c</fullName>
        <formula>PL_Quote_Lookup__r.PL_PTP_pct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre-Tax Profit %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PL_Quote_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Lookup</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>P&amp;L Sales Opportunities</relationshipLabel>
        <relationshipName>P_L_Sales_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuoteId__c</fullName>
        <formula>IF(ISBLANK(PL_Quote_Lookup__c),CASESAFEID(L2I_Sales_Opportunity__r.SBQQ__PrimaryQuote__c), CASESAFEID(PL_Quote_Lookup__c)  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QuoteId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGNA_Admin_Fee__c</fullName>
        <formula>L2I_Sales_Opportunity__r.SGNA_Admin_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SGNA Admin Fee</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Variable_Risk_Contingency__c</fullName>
        <formula>L2I_Sales_Opportunity__r.Variable_Risk_Contingency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variable Risk Contingency</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <label>P&amp;L Sales Opportunity</label>
    <nameField>
        <displayFormat>ORPAL-{00000}</displayFormat>
        <label>Opportunities Related To P&amp;L Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>P&amp;L Sales Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>